tests/nightly/extern_crate/compile_fail/longer_path.stderr
error: only paths of length 1 are supported here
 --> $DIR/longer_path.rs:3:13
  |
3 |     impl<T> ptr::NonNull<T> {
  |             ^^^^^^^^^^^^^^^
  |
  = help: try adding `ptr` as a submodule and put the `impl` block there

error: only paths of length 1 are supported here
 --> $DIR/longer_path.rs:8:10
  |
8 |     impl foo::bar::Baz {}
  |          ^^^^^^^^^^^^^
  |
  = help: try adding `foo::bar` as submodules and put the `impl` block there
